# blossa

./: .gitattributes  .gitignore  CLA.md  CONTRIBUTING.md  NOTICE  README.md  blossa.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: docker-compose.yml
docker/init/: 01_create_schema.sql
examples/: database_map.demo.json  database_map.demo.md
samples/: README.md  allscan.yml  applog_demo.sql  bank_demo.sql  bank_workload.sql  cfk.yml  composite_demo.sql  cross_schema_demo.sql  crossscan.yml  extsales.yml  hr.yml  hr_install_auto.sql  legacy_ify.sql  load_sample_schemas.sh  run_eval.sh
src/blossa/: __init__.py  __main__.py  cli.py  config.py  demo.py  diagnostics.py  evaluation.py  grants.py  logs.py  logsense.py  models.py  nlquery.py  pipeline.py  privacy.py  program.py
src/blossa/checks/: __init__.py  deterministic.py
src/blossa/db/: __init__.py  connection.py  introspect.py  profile.py
src/blossa/llm/: __init__.py  base.py  heuristic.py  http_provider.py
src/blossa/render/: __init__.py  json_export.py  markdown.py
src/blossa/render/templates/: database_map.md.j2
src/blossa/semantic/: __init__.py  runner.py
src/blossa/summary/: __init__.py  builder.py
src/blossa/web/: __init__.py  server.py
src/blossa/web/static/: app.js  index.html  style.css
tests/: test_checks.py  test_cli.py  test_diagnostics.py  test_evaluation.py  test_grants.py  test_heuristic_and_render.py  test_introspect.py  test_logs.py  test_logsense.py  test_nlquery.py  test_privacy.py  test_program.py  test_summary_pii.py  test_web.py
