[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blossa"
version = "0.1.0"
description = "Reconstruct and document the business meaning of a legacy Oracle database schema — read-only, local-first, privacy-safe."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Bogdan Voinea" }]
keywords = ["oracle", "data-catalog", "schema", "documentation", "llm", "data-dictionary"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "oracledb>=2.0",
    "typer>=0.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
# Optional local web UI (the `blossa serve` command): a small FastAPI app + uvicorn.
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
blossa = "blossa.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/blossa"
Repository = "https://github.com/your-org/blossa"

[tool.hatch.build.targets.wheel]
packages = ["src/blossa"]
# Ship the web UI's static assets (non-Python files) inside the wheel.
artifacts = ["src/blossa/web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer's API is built around calling Option()/Argument() in parameter defaults.
"src/blossa/cli.py" = ["B008"]
